--- a/Session8/whatever.html
+++ b/Session8/whatever.html
@@ -18,6 +18,8 @@
             <li>hej3</li>
         </ul>
     </div>
+    <!-- <script src="whatever.js"></script> -->
+    <!-- <script src="whatever2.js"></script> -->
     <script>
         // let divElement = document.getElementById("labelId");
         // const myList = ["hello", "There", "how are you"];
@@ -28,10 +30,16 @@
         //     }
         // result += "</ul>"
         // divElement.innerHTML = result;
-        const lis = document.getElementsByClassName("myClass");
-        for (let index = 0; index < lis.length; index++) {
-            const element = lis[index];
-            element.innerHTML = "<b>" + element.innerHTML + "</b>"
+
+
+        // const lis = document.getElementsByClassName("myClass");
+        // for (let index = 0; index < lis.length; index++) {
+        //     const element = lis[index];
+        //     element.innerHTML = "<b>" + element.innerHTML + "</b>"
+        // }
+        
+        if ("false") {
+            console.log("this was actually true!")
         }
     </script>
 </body>
