--- a/Session11-AJAX,XML,JSON/LoadSimpleText.html
+++ b/Session11-AJAX,XML,JSON/LoadSimpleText.html
@@ -15,6 +15,8 @@
     <script>
         $.get("ExampleContent.txt", handleContent);
 
+        // handleContent("hello world", null);
+
         function handleContent(data, httpstatus){
             $("#contentPlacement").html(data);
         }
